welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def  move(nbPas: Int,versLAvant: Boolean) {
	if(versLavant=false){
		avance(nbPas) 
	}
	else {
		recule(nbPas)
	}
}
